# memoires

./: .gitignore  CLAIMS_SPINE.md  GAPS.md  PROVENANCE.md  README.md  SUPER_AXIOMS.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
audits/: ADVERSARIAL_REVIEW.md  MERGES_APPLIED.md  REC_AUDIT.md
data/: README.md  move_graph.json
data/sources/: betanalpha.md  dansblog.md  pymc-labs.md  pymc.md  pyro.md  stan.md
experiments/: RESULTS.md  spike_slab_vs_horseshoe.py
memoires/: __init__.py  cli.py
memoires/catalog/: CLAIMS_SPINE.md  GAPS.md  SUPER_AXIOMS.md
memoires/catalog/data/: _resolutions.json  claim_sa_edges.json  entry_vectors.npz  fold_sections.json  move_graph.json  rec_claim_edges.json  related_edges.json  source_map.json  unassigned_recs.json
memoires/catalog/pages/: CC-convergence-diagnostics.md  (+15 more)
methodology/: REVIEW_SYSTEM.md  TAXONOMY.md
pages/: CC-convergence-diagnostics.md  CC-geometry-sampling.md  CC-model-evaluation.md  CC-priors-identifiability.md  gaussian-process.md  hierarchical-multilevel.md  latent-factor.md  measurement-error-missing.md  mixture.md  ode-dynamical.md  regression.md  sparse-shrinkage.md  spatial-areal.md  time-series-state-space.md
process/: ARTIFACTS.md  EMBEDDING.md  PROVENANCE.md  RELEASING.md  roadmap.md  update.md  worklog.md
process/audits/: HUMAN_GATE.md  MERGES_APPLIED.md  MOVE_AUDIT.md
process/methodology/: SCHEMA.md  TARGET_ARCHITECTURE.md
process/pipeline/: embed.py  render_graph.py  validate_links.py
pymc_L1/: CONTRADICTIONS.md  ENRICHMENTS.md  README.md  RECS.md  TECHNIQUES.md
(+783 files in other folders)
